fix: position properties to spacing properties changed

--- a/public/styles/base/_reset.scss
+++ b/public/styles/base/_reset.scss
@@ -27,5 +27,5 @@ section {
 
 h2 {
   font-family: "Poppins-bold";
-  font-size: 90px;
+  font-size: 72px;
 }
