--- a/src/app/shared/components/about-me/about-me.scss
+++ b/src/app/shared/components/about-me/about-me.scss
@@ -7,8 +7,7 @@
 
 .content {
   @include all.flex-s-between;
-  padding-top: 120px;
-  height: 700px;
+  padding: 100px 0 60px 0;
   width: 100%;
   max-width: 1440px;
 
@@ -23,14 +22,13 @@
   gap: 20px;
   left: 90px;
   width: 470px;
-  height: fit-content;
 
   &__p {
     display: flex;
     gap: 10px;
 
     &__icon {
-      top: 3px;
+      padding-top: 3px;
       height: 48px;
       width: 48px;
     }
@@ -40,17 +38,11 @@
 .content-img {
   @include all.flex-center;
   align-items: center;
-  height: 700px;
 
   &__img {
-    bottom: 40px;
     width: 480px;
     height: 480px;
     border: 5px solid all.$color-primary;
     border-radius: 50%;
-  }
-
-  &__line {
-    bottom: 40px;
   }
 }
