--- a/src/app/shared/components/header/header.scss
+++ b/src/app/shared/components/header/header.scss
@@ -1,21 +1,18 @@
 @use '../../../../../public/styles/main' as all;
 
 header {
-
   @include all.my-section;
   align-items: center;
-    position: fixed;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
   z-index: 1;
-  height: 130px;
 }
 
 .content {
   @include all.flex-s-between;
   align-items: center;
-  gap: 10px;
   height: 100%;
   width: 100%;
   max-width: 1440px;
@@ -23,18 +20,17 @@ header {
   background-color: all.$color-dark;
 
   &__logo {
-    left: 100px;
-    bottom: 8px;
+    margin: 35px 0 40px 100px;
   }
 
   &__menu {
     display: flex;
-    right: 200px;
-    bottom: 8px;
+    gap: 100px;
+    margin: 0 100px 8px 0;
 
     ul {
       display: flex;
-      gap: 20px;
+      gap: 30px;
 
       a {
         font-size: 23px;
@@ -49,7 +45,6 @@ header {
     &__lang {
       display: flex;
       gap: 15px;
-      left: 100px;
     }
   }
 }
