--- a/src/app/shared/components/hero/hero.scss
+++ b/src/app/shared/components/hero/hero.scss
@@ -6,10 +6,10 @@ section {
 
 .content {
   @include all.flex-c-s-around;
-  top: 20px;
   width: 100%;
   height: 100dvh;
   max-width: 1440px;
+  padding-top: 100px;
   font-family: 'Poppins-regular';
   color: all.$color-white;
   background-color: all.$color-dark;
@@ -21,37 +21,35 @@ section {
 }
 
 .content-1 {
-  @include all.flex-s-around;
-  top: 60px;
+  display: flex;
+  align-items: center;
+  gap: 60px;
+  padding: 0 100px;
   background-image: url('../../../../../public/assets/images/shadows/shadow-1.png');
   background-repeat: no-repeat;
   background-position-x: 0%;
-  background-position-y: 100%;
+  background-position-y: 80%;
 
   &__character {
-    left: 20px;
-    height: 750px;
-    width: 550px;
+    height: 700px;
+    width: 500px;
   }
 }
 
 .title {
   @include all.flex-center;
-  top: 200px;
-  right: 50px;
+  margin-bottom: 40px;
 
   &__part-1 {
-    top: 30px;
-    left: 65px;
-    height: 150px;
+    height: 120px;
     width: 80px;
     transform: rotate(270deg);
 
     p {
-      bottom: 55px;
-      right: 30px;
-      width: 150px;
-      font-size: 64px;
+      right: 50px;
+      margin-top: 15px;
+      width: 120px;
+      font-size: 54px;
     }
   }
 
@@ -60,29 +58,30 @@ section {
     align-items: center;
 
     h1 {
-      height: 105px;
-      font-size: 90px;
+      font-size: 80px;
       font-family: 'Poppins-bold';
-      letter-spacing: 3px;
+      letter-spacing: 3.5px;
+      height: 90px;
     }
 
-    h2 {
-      height: 70px;
-      font-size: 58px;
+    p {
+      font-size: 54px;
       color: all.$color-secondary;
     }
 
     a {
-      top: 80px;
       font-size: 23px;
-      padding: 12px 30px;
-      border-radius: 10px;
-      background-color: all.$color-primary;
-      transition: 0.3s;
+      margin-top: 50px;
 
-      &:hover {
-        padding: 18px 36px;
-        background-color: all.$color-secondary;
+      span {
+        padding: 12px 30px;
+        border-radius: 10px;
+        background-color: all.$color-primary;
+        transition: 0.1s;
+        &:hover {
+          padding: 18px 36px;
+          background-color: all.$color-secondary;
+        }
       }
     }
   }
@@ -90,7 +89,6 @@ section {
 
 .content-2 {
   @include all.flex-s-between;
-  top: 30px;
 
   &__social-media {
     @include all.flex-v-center;
@@ -107,7 +105,7 @@ section {
       align-items: center;
       height: 45px;
       width: 45px;
-      
+
       img {
         height: 30px;
         width: 30px;
@@ -122,14 +120,16 @@ section {
   }
 
   &__scroll-notice {
-    top: -75px;
-    right: 60px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-right: 30px;
+    bottom: 50px;
     font-size: 23px;
     transform: rotate(90deg);
 
     img {
-      top: 2px;
-      left: 10px;
+      margin-top: 5px;
       height: 16px;
       width: 16px;
       transform: rotate(270deg);
